Pushing directly to master is fun

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.jdbc.DataSourceAutoConfiguration
+
+cloud.aws.region.static=eu-west-3
+cloud.aws.stack.auto = false
